# eufyformatter

./: README.md  convert_eufy.py  pyproject.toml
src/: convert_eufy.py  fit.py  test.py
src/test_data/: test_read_imperial.csv  test_read_metric.csv
