[tool.poetry]
name = "eufyformatter"
version = "0.1.0"
description = ""
authors = ["Suchandra Thapa <suchandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich =  "~13.7"
click = "~8.1.7"
getkey = "^0.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


